update templates and values

--- a/templates/alerts_channel_slack.yaml
+++ b/templates/alerts_channel_slack.yaml
@@ -21,7 +21,7 @@ spec:
       - {{ .Values.channel.links.policyNames }} 
     policy_kubernetes_objects:
       - name: {{ .Values.channel.links.policyNames }}
-        namespace: "default"
+        namespace: {{ .Values.channel.links.namespace }}
   configuration:
     url: {{ .Values.channel.configuration.url }}
 {{- end }}
