--- a/values.yaml
+++ b/values.yaml
@@ -1,30 +1,82 @@
-apiKey: < >
-accountId: < >
+apiKey: NRAK-...
+accountId: ""
 
 channel:
   createChannel:
+    # Set to true to enable the channel creation.
     enabled: false
   name: "teste"
   type: "slack"
   region: "US"
   links:
     policyNames: "teste"
+    namespace: "default"
   configuration:
-    url: < >
+    # Webhook of the slack channel
+    url: ""
 
 policy:
   createPolicy:
+    # Set to true to enable the policy creation.
     enabled: false
   name: teste
   incidentPreference: "PER_POLICY"
   region: "US"
+  # Create one or more alert conditions at policy creation.
+  # conditions:
+  #   - name: "teste"
+  #     type: "NRQL"
+  #     nrql:
+  #       query: "SELECT count(*) FROM Transactions"
+  #       evaluationOffset: 10
+  #     enabled: true
+  #     terms:
+  #       threshold: 75.0
+  #       threshold_occurrences: "ALL"
+  #       threshold_duration: 60
+  #       priority: "CRITICAL"
+  #       operator: "ABOVE" 
+  #     expiration:
+  #       expirationDuration: 360
+  #       closeViolationsOnExpiration: false
+  #       openViolationOnExpiration: true
+  #     violationTimeLimit: "ONE_HOUR"
+  #     valueFunction: "SINGLE_VALUE"
+  #   - name: "teste2"
+  #     type: "NRQL"
+  #     nrql:
+  #       query: "SELECT count(*) FROM Transactions"
+  #       evaluationOffset: 10
+  #     enabled: true
+  #     terms:
+  #       threshold: 75.0
+  #       threshold_occurrences: "ALL"
+  #       threshold_duration: 60
+  #       priority: "CRITICAL"
+  #       operator: "ABOVE" 
+  #     expiration:
+  #       expirationDuration: 360
+  #       closeViolationsOnExpiration: false
+  #       openViolationOnExpiration: true
+  #     violationTimeLimit: "ONE_HOUR"
+  #     valueFunction: "SINGLE_VALUE"
 
-
+# Use alertCondition to create alerts in existing policies. To create alerts in a new policy use the conditions 
+# section at "policy".
 alertCondition:
   createAlertCondition:
+    # Set to true to enable the creation of alerts in existing policies.
     enabled: true
+  secretEnabled:
+    # Set to true if you're using k8s secrets to store your apiKey.
+    enabled: false
   conditions:
     - name: "teste"
+      # Uncomment if using k8s secrets to store apiKey.
+      # apiKeySecret:
+      #   nrApiKeyName: "..."
+      #   secretNamespace: "..."
+      #   apiKey: "..."
       type: "NRQL"
       nrql:
         query: "SELECT count(*) FROM Transactions"
@@ -40,12 +92,21 @@ alertCondition:
         expirationDuration: 360
         closeViolationsOnExpiration: false
         openViolationOnExpiration: true
+      signal:
+        aggregationWindow: 360
+        evaluationOffset: 30
+        fillOption: NONE
+        fillValue: 15
       violationTimeLimit: "ONE_HOUR"
       valueFunction: "SINGLE_VALUE"
       # Must reference an existing New Relic alert policy from your account
       existingPolicyId: "3328438"
       region: "US"
     - name: "teste2"
+      apiKeySecret:
+        nrApiKeyName: "..."
+        secretNamespace: "..."
+        apiKey: "..."
       type: "NRQL"
       nrql:
         query: "SELECT count(*) FROM Transactions"
@@ -61,6 +122,11 @@ alertCondition:
         expirationDuration: 360
         closeViolationsOnExpiration: false
         openViolationOnExpiration: true
+      signal:
+        aggregationWindow: 360
+        evaluationOffset: 30
+        fillOption: NONE
+        fillValue: 15
       violationTimeLimit: "ONE_HOUR"
       valueFunction: "SINGLE_VALUE"
       # Must reference an existing New Relic alert policy from your account
