--- a/values.yaml
+++ b/values.yaml
@@ -66,12 +66,12 @@ policy:
 alertCondition:
   createAlertCondition:
     # Set to true to enable the creation of alerts in existing policies.
-    enabled: true
+    enabled: false
   secretEnabled:
     # Set to true if you're using k8s secrets to store your apiKey.
     enabled: false
   conditions:
-    - name: "teste"
+    - name: "cpu"
       # Uncomment if using k8s secrets to store apiKey.
       # apiKeySecret:
       #   nrApiKeyName: "..."
@@ -79,7 +79,7 @@ alertCondition:
       #   apiKey: "..."
       type: "NRQL"
       nrql:
-        query: "SELECT count(*) FROM Transactions"
+        query: "FROM K8sContainerSample SELECT (latest(cpuUsedCores / cpuLimitCores) * 100) AS 'CPU%'  WHERE clusterName = 'cluster' and containerName LIKE '%name%' FACET clusterName, podName"
         evaluationOffset: 10
       enabled: true
       terms:
@@ -100,16 +100,16 @@ alertCondition:
       violationTimeLimit: "ONE_HOUR"
       valueFunction: "SINGLE_VALUE"
       # Must reference an existing New Relic alert policy from your account
-      existingPolicyId: "3328438"
+      existingPolicyId: " "
       region: "US"
-    - name: "teste2"
+    - name: "mem"
       apiKeySecret:
         nrApiKeyName: "..."
         secretNamespace: "..."
         apiKey: "..."
       type: "NRQL"
       nrql:
-        query: "SELECT count(*) FROM Transactions"
+        query: "SELECT (average(memoryUsedBytes / memoryLimitBytes) * 100) AS 'Memory%' FROM K8sContainerSample WHERE clusterName = 'clustername' and containerName LIKE '%deployment-name%' FACET clusterName, podName "
         evaluationOffset: 10
       enabled: true
       terms:
@@ -130,5 +130,35 @@ alertCondition:
       violationTimeLimit: "ONE_HOUR"
       valueFunction: "SINGLE_VALUE"
       # Must reference an existing New Relic alert policy from your account
-      existingPolicyId: "3328438"
+      existingPolicyId: ""
+      region: "US"
+    - name: "restart"
+      apiKeySecret:
+        nrApiKeyName: "..."
+        secretNamespace: "..."
+        apiKey: "..."
+      type: "NRQL"
+      nrql:
+        query: "FROM K8sContainerSample SELECT max(restartCount) - min(restartCount) AS 'Restarts' WHERE clusterName = 'clusterName' AND containerName LIKE '%name%' FACET clusterName, podName"
+        evaluationOffset: 10
+      enabled: true
+      terms:
+        threshold: 75.0
+        threshold_occurrences: "ALL"
+        threshold_duration: 60
+        priority: "CRITICAL"
+        operator: "ABOVE" 
+      expiration:
+        expirationDuration: 360
+        closeViolationsOnExpiration: false
+        openViolationOnExpiration: true
+      signal:
+        aggregationWindow: 360
+        evaluationOffset: 30
+        fillOption: NONE
+        fillValue: 15
+      violationTimeLimit: "ONE_HOUR"
+      valueFunction: "SINGLE_VALUE"
+      # Must reference an existing New Relic alert policy from your account
+      existingPolicyId: ""
       region: "US"
